--- a/views/index.html
+++ b/views/index.html
@@ -95,9 +95,9 @@
         <h3>Descubre los nuevos lanzamientos que tenemos para ti.</h3>
         <table>
             <tr>
-              <td><a href="#"><img src="https://www.sephora.com.mx/on/demandware.static/-/Sites-masterCatalog_Sephora/es_MX/dwdd71f349/images/hi-res/eau-de-parfum-armani-giorgio-armani-acqua-di-gi-pour-homme-profondo-eau-de-parfum3614272865235A.jpg" alt="" style="width: 100%; height: 100%;"></a></td>
-              <td><a href="#"><img src="https://rawnaq.ps/wp-content/uploads/2022/09/Stronger-With-You-Intensely-Giorgio-Armani.jpg" alt="" style="width: 100%; height: 100%;"></a></td>
-              <td><a href="#"><img src="https://m.media-amazon.com/images/I/61IpDv3hNRL._SL1500_.jpg" alt="" style="width: 100%; height: 100%;"></a></td>
+              <td><a href="/viewsPerfumes/acqua.html"><img src="https://www.sephora.com.mx/on/demandware.static/-/Sites-masterCatalog_Sephora/es_MX/dwdd71f349/images/hi-res/eau-de-parfum-armani-giorgio-armani-acqua-di-gi-pour-homme-profondo-eau-de-parfum3614272865235A.jpg" alt="" style="width: 100%; height: 100%;"></a></td>
+              <td><a href="/viewsPerfumes/str-with.html"><img src="https://rawnaq.ps/wp-content/uploads/2022/09/Stronger-With-You-Intensely-Giorgio-Armani.jpg" alt="" style="width: 100%; height: 100%;"></a></td>
+              <td><a href="/viewsPerfumes/vik.html"><img src="https://m.media-amazon.com/images/I/61IpDv3hNRL._SL1500_.jpg" alt="" style="width: 100%; height: 100%;"></a></td>
             </tr>
           </table>
     </section>
@@ -107,9 +107,9 @@
         <h3>Descubre aromas de el otro lado del mundo.</h3>
         <table class="tabla">
             <tr>
-              <td><a href="#"><img src="https://www.bloomingcorner.gr/wp-content/uploads/2023/12/lattafakhamrahqahwaedp100ml.png" alt="" style="width: 100%; height: 100%;"></a></td>
-              <td><a href="#"><img src="https://www.perfumenz.co.nz/cdn/shop/files/afnan-9am-dive_1024x1024.png?v=1698444644" alt="" style="width: 100%; height: 100%;"></a></td>
-              <td><a href="#"><img src="https://www.intenseoud.com/cdn/shop/files/hawasice_6_1024x1024.png?v=1698343670" alt="" style="width: 100%; height: 100%;"></a></td>
+              <td><a href="/viewsPerfumes/qahwa.html"><img src="https://www.bloomingcorner.gr/wp-content/uploads/2023/12/lattafakhamrahqahwaedp100ml.png" alt="" style="width: 100%; height: 100%;"></a></td>
+              <td><a href="/viewsPerfumes/9am.html"><img src="https://www.perfumenz.co.nz/cdn/shop/files/afnan-9am-dive_1024x1024.png?v=1698444644" alt="" style="width: 100%; height: 100%;"></a></td>
+              <td><a href="/viewsPerfumes/hawa-ice.html"><img src="https://www.intenseoud.com/cdn/shop/files/hawasice_6_1024x1024.png?v=1698343670" alt="" style="width: 100%; height: 100%;"></a></td>
             </tr>
           </table>
     </section>
