--- a/views/productosNuevos.html
+++ b/views/productosNuevos.html
@@ -89,21 +89,18 @@
                 <script>
                     let images = [
                         "https://th.bing.com/th/id/OIP.LEIhyXMQSWEV4YVCtfVh2wHaJi?pid=ImgDet&w=139.68&h=180&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.n2UflBLld0BXXOxXRqsOLgHaHa?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.R_fXodyYYr62ZdqFwSROQAHaHa?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.cPb7O0wRGsFImp7vW4rAYAHaIA?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", 
-                        "https://th.bing.com/th/id/OIP.QgJlrFnK9ZyOJgFdfgKFsAHaH5?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.8j15RKMwk4tbLBLQcQkMHwHaHa?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.8xCUjKYkNYyQvpdc6TvcvAHaIb?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.FpO6XMOayx0awfUxa8THCQAAAA?pid=ImgDet&w=150&h=180&c=7&dpr=1.5", 
-                        "https://th.bing.com/th/id/OIP.L5bxAkO3-qf1UqZFHNf9GgAAAA?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP._RwLffPp3kOvvj0zbnkkuQHaHa?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.o4wTKezQaHlgh3t7fuwihAHaIb?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.vMwDs0cpQ_u9acGeaDM6WAHaHa?pid=ImgDet&w=135&h=180&c=7&dpr=1.5"
+                        "https://th.bing.com/th/id/OIP.QgJlrFnK9ZyOJgFdfgKFsAHaH5?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.8j15RKMwk4tbLBLQcQkMHwHaHa?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.8xCUjKYkNYyQvpdc6TvcvAHaIb?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.FpO6XMOayx0awfUxa8THCQAAAA?pid=ImgDet&w=150&h=180&c=7&dpr=1.5"
                     ];
                     let texts = [
                         "JPG Le Beau Paradise Garden", "YSL MYSELF", "Versace Pour Homme", "Dior New Look", 
-                        "Loewe Paula's Ibiza", "Tom Ford Vanilla Sex", "Bvlgari Allegra Chill & Sole", "Estée Lauder Tender Light", 
-                        "Jo Malone London Frangipani", "Kilian Paris Sunkissed Goddess", "Gucci The Alchemist’s Garden", "Chanel Comète Les Exclusifs"
+                        "Loewe Paula's Ibiza", "Tom Ford Vanilla Sex", "Bvlgari Allegra Chill & Sole", "Estée Lauder Tender Light"
                     ];
                     let viewsPerfumes=[
                         "/viewsPerfumes/jpg-le-beau.html", "/viewsPerfumes/myslf.html", "/viewsPerfumes/ver-pour.html", "/viewsPerfumes/dior-new.html",
-                        "/viewsPerfumes/loewe-paula.html", "/viewsPerfumes/tom-vanilla.html", "/viewsPerfumes/bvl-alle.html", "/viewsPerfumes/est-tender.html",
-                        "/viewsPerfumes/jo-malone.html", "/viewsPerfumes/kil-sunkissed.html", "/viewsPerfumes/guc-alchemist.html", "/viewsPerfumes/chan-comete.html"
+                        "/viewsPerfumes/loewe-paula.html", "/viewsPerfumes/tom-vanilla.html", "/viewsPerfumes/bvl-alle.html", "/viewsPerfumes/est-tender.html"
                     ];
                     let count = 0;
-                    for (let i = 0; i < 3; i++) {
+                    for (let i = 0; i < 2; i++) {
                         document.write('<tr>');
                         for (let j = 0; j < 4; j++) {
                             document.write(`<td><img src="${images[count]}" alt="Imagen ${count+1}"><br><a href="${viewsPerfumes[count]}">${texts[count]}</a></td>`);
@@ -171,7 +168,7 @@
         </div>
             
         <div class="row">
-        AROMAS Copyright © 2025 AROMAS - All rights reserved || Designed By: Baruc 
+        AROMAS Copyright © 2025 AROMAS - All rights reserved || Designed By: INGE 
         </div>
         </div>
     </footer>
