--- a/views/Formulario.html
+++ b/views/Formulario.html
@@ -1,196 +1,211 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/styles/index.css">
-    <link rel="shortcut icon" href="/img/icon.png" type="image/x-icon">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
-    <!-- Bootstrap 5 -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/css/bootstrap.min.css" rel="stylesheet">
-    <!-- Iconos Bootstrap -->
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons/font/bootstrap-icons.css">
-    <!-- CSS Personalizado -->
-    <link rel="stylesheet" href="styles.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="/styles/index.css" />
+    <link rel="shortcut icon" href="/img/icon.png" type="image/x-icon" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH"
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="/styles/signup.css" />
     <title>Inicio</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <h1>AROMAS</h1>
-        <nav class="nav-container">
-            <button class="hamburger" onclick="toggleMenu()">☰</button>
-            <ul class="menu" id="menu">
-                <li>
-                    <a href="/views/index.html">Inicio</a>
-                </li>
-                <li>
-                    <a href="/views/ofertas.html">Ofertas</a>
-                    <ul class="submenu">
-                        <li><a href="/viewsPerfumes/nau-voy.html">Nautica Voyage</a></li>
-                        <li><a href="/viewsPerfumes/ver-cryst.html">Versace Bright Crystal</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="/views/productosNuevos.html">Novedades</a>
-                    <ul class="submenu">
-                        <li><a href="/viewsPerfumes/myslf.html">YSL MYSELF</a></li>
-                        <li><a href="/viewsPerfumes/bvl-alle.html">Bvlgari Allegra Chill & Sole</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="/views/damas.html">Damas</a>
-                    <ul class="submenu">
-                        <li><a href="/viewsPerfumes/kal-klein.html">Calvin Klein Beauty</a></li>
-                        <li><a href="/viewsPerfumes/miss-dior.html">Miss Dior</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <a href="/views/caballeros.html">Caballeros</a>
-                    <ul class="submenu">
-                        <li><a href="/viewsPerfumes/hawa-ice.html">Hawa ICE</a></li>
-                        <li><a href="/viewsPerfumes/str-with.html">Stronger With You Intensely</a></li>
-                    </ul>
-                </li>
-                <li>
-                    <div class="search">
-                        <form action="/views/construccion.html">
-                            <input type="text" placeholder="Buscar..." name="search">
-                            <button type="submit">Buscar</button>
-                        </form>
-                    </div> 
-                </li>
-                <li> 
-                    <button onclick="window.location.href='/views/Formulario.html';" class="btn btn-outline-dark">
-                        Registro
-                    </button>
-                </li>
-                <li> 
-                    <button onclick="window.location.href='/views/sesion.html';" class="btn btn-outline-dark">
-                        Iniciar Sesion
-                    </button>
-                </li>
+      <h1>AROMAS</h1>
+      <nav class="nav-container">
+        <button class="hamburger" onclick="toggleMenu()">☰</button>
+        <ul class="menu" id="menu">
+          <li>
+            <a href="/views/index.html">Inicio</a>
+          </li>
+          <li>
+            <a href="/views/ofertas.html">Ofertas</a>
+            <ul class="submenu">
+              <li><a href="/viewsPerfumes/nau-voy.html">Nautica Voyage</a></li>
+              <li>
+                <a href="/viewsPerfumes/ver-cryst.html"
+                  >Versace Bright Crystal</a
+                >
+              </li>
             </ul>
-        </nav>
-
-        
-
-        
-        <div class="bread">
-            <nav aria-label="breadcrumb">
-                <ol class="breadcrumb">
-                  <li class="breadcrumb-item active" aria-current="page">Inicio</li>
-                  <li class="breadcrumb-item active" aria-current="page">Formulario</li>
-                </ol>
-            </nav>  
-        </div>
-             
-
-        <script>
-            function toggleMenu() {
-                document.getElementById("menu").classList.toggle("active");
-            }
-        </script>
-    </header>
-    <div class="container mt-5">
-        <div class="row justify-content-center">
-            <div class="col-md-6">
-                <div class="card p-4">
-                    <h4 class="mb-3">Registro</h4>
-                    <form>
-                        <div class="row">
-                            <div class="col-md-6 mb-3">
-                                <label for="firstName" class="form-label">Nombre</label>
-                                <input type="text" class="form-control" id="firstName" required>
-                            </div>
-                            <div class="col-md-6 mb-3">
-                                <label for="lastName" class="form-label">Apellido</label>
-                                <input type="text" class="form-control" id="lastName" required>
-                            </div>
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="username" class="form-label">Nombre de Usuario</label>
-                            <div class="input-group">
-                                <span class="input-group-text">@</span>
-                                <input type="text" class="form-control" id="username" required>
-                            </div>
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="email" class="form-label">Correo Electronico</label>
-                            <input type="email" class="form-control" id="email" placeholder="you@example.com">
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="address" class="form-label">Direccion</label>
-                            <input type="text" class="form-control" id="address" placeholder="1234 Main St" required>
-                        </div>
-
-                        <div class="mb-3">
-                            <label for="address2" class="form-label">Direccion 2 (Optional)</label>
-                            <input type="text" class="form-control" id="address2" placeholder="Apartment or suite">
-                        </div>
-
-                        <div class="row">
-                            <div class="col-md-4 mb-3">
-                                <label for="country" class="form-label">Pais</label>
-                                <select class="form-select" id="country" required>
-                                    <option value="">Choose...</option>
-                                    <option>United States</option>
-                                    <option>Mexico</option>
-                                    <option>Spain</option>
-                                </select>
-                            </div>
-                            <div class="col-md-4 mb-3">
-                                <label for="state" class="form-label">Estaddo</label>
-                                <select class="form-select" id="state" required>
-                                    <option value="">Choose...</option>
-                                    <option>Nayarit</option>
-                                    <option>Jalisco</option>
-                                    <option>Sonora</option>
-                                </select>
-                            </div>
-                            <div class="col-md-4 mb-3">
-                                <label for="zip" class="form-label">Zip</label>
-                                <input type="text" class="form-control" id="zip" required>
-                            </div>
-                        </div>
-
-                        <button class="btn btn-primary w-100" type="submit">Registrarse</button>
-                    </form>
-                </div>
+          </li>
+          <li>
+            <a href="/views/productosNuevos.html">Novedades</a>
+            <ul class="submenu">
+              <li><a href="/viewsPerfumes/myslf.html">YSL MYSELF</a></li>
+              <li>
+                <a href="/viewsPerfumes/bvl-alle.html"
+                  >Bvlgari Allegra Chill & Sole</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li>
+            <a href="/views/damas.html">Damas</a>
+            <ul class="submenu">
+              <li>
+                <a href="/viewsPerfumes/kal-klein.html">Calvin Klein Beauty</a>
+              </li>
+              <li><a href="/viewsPerfumes/miss-dior.html">Miss Dior</a></li>
+            </ul>
+          </li>
+          <li>
+            <a href="/views/caballeros.html">Caballeros</a>
+            <ul class="submenu">
+              <li><a href="/viewsPerfumes/hawa-ice.html">Hawa ICE</a></li>
+              <li>
+                <a href="/viewsPerfumes/str-with.html"
+                  >Stronger With You Intensely</a
+                >
+              </li>
+            </ul>
+          </li>
+          <li>
+            <div class="search">
+              <form action="/views/construccion.html">
+                <input type="text" placeholder="Buscar..." name="search" />
+                <button type="submit">Buscar</button>
+              </form>
             </div>
-        </div>
-    </div>
+          </li>
+          <li>
+            <button
+              onclick="window.location.href='/views/Formulario.html';"
+              class="btn btn-outline-dark"
+            >
+              Registro
+            </button>
+          </li>
+          <li>
+            <button
+              onclick="window.location.href='/views/sesion.html';"
+              class="btn btn-outline-dark"
+            >
+              Iniciar Sesion
+            </button>
+          </li>
+        </ul>
+      </nav>
 
-    <!-- Bootstrap JS -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.2/dist/js/bootstrap.bundle.min.js"></script>
+      <div class="bread">
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item active" aria-current="page">
+              <a href="/views/index.html">Inicio</a>
+            </li>
+            <li class="breadcrumb-item active" aria-current="page">
+              Formulario
+            </li>
+          </ol>
+        </nav>
+      </div>
 
+      <script>
+        function toggleMenu() {
+          document.getElementById("menu").classList.toggle("active");
+        }
+      </script>
+    </header>
 
-
+    <form action="#" method="POST" class="form">
+      <h1>Registro</h1>
+      <div class="form-group">
+        <label>Nombre:</label>
+        <input type="text" name="firstName" required />
+      </div>
+      <div class="form-group">
+        <label>Apellido:</label>
+        <input type="text" name="lastName" required />
+      </div>
+      <div class="form-group">
+        <label>Correo:</label>
+        <input type="email" name="email" required />
+      </div>
+      <div class="form-group">
+        <label>Confirmación de Correo:</label>
+        <input type="email" name="confirmEmail" required />
+      </div>
+      <div class="form-group">
+        <label>Contraseña:</label>
+        <input type="password" name="password" required />
+      </div>
+      <div class="form-group">
+        <label>Confirmación de Contraseña:</label>
+        <input type="password" name="confirmPassword" required />
+      </div>
+      <div class="form-group">
+        <label>Calle:</label>
+        <input type="text" name="calle" required />
+      </div>
+      <div class="form-group">
+        <label>Número Exterior:</label>
+        <input type="text" name="numeroExterior" required />
+      </div>
+      <div class="form-group">
+        <label>Número Interior:</label>
+        <input type="text" name="numeroInterior" />
+      </div>
+      <div class="form-group">
+        <label>Colonia:</label>
+        <input type="text" name="colonia" required />
+      </div>
+      <div class="form-group">
+        <label>Ciudad:</label>
+        <input type="text" name="municipio" required />
+      </div>
+      <div class="form-group">
+        <label>Estado:</label>
+        <input type="text" name="estado" required />
+      </div>
+      <div class="form-group">
+        <label>Código Postal:</label>
+        <input type="text" name="codigoPostal" required />
+      </div>
+      <button type="submit" class="submit-button">Registrar</button>
+    </form>
 
     <footer id="footer">
-        <div class="footer">
+      <div class="footer">
         <div class="row">
+          <ul>
             <ul>
-                <ul>
-                    <li><a href="/viewsFooter/politica.html#contacto">Contacto</a></li>
-                    <li><a href="/viewsFooter/privacidad.html">Privacidad</a></li>
-                    <li><a href="/viewsFooter/politica.html">Politica de Empresa</a></li>
-                    <li><a href="/viewsFooter/terminos.html">Terminos y Condiciones</a></li>
-                    <li><a href="/viewsFooter/carrera.html">Carrera</a></li>
-                    <li><a href="/viewsFooter/menusitio.html">Mapa de Sitio</a></li>
-                </ul>
+              <li>
+                <a href="/viewsFooter/politica.html#contacto">Contacto</a>
+              </li>
+              <li><a href="/viewsFooter/privacidad.html">Privacidad</a></li>
+              <li>
+                <a href="/viewsFooter/politica.html">Politica de Empresa</a>
+              </li>
+              <li>
+                <a href="/viewsFooter/terminos.html">Terminos y Condiciones</a>
+              </li>
+              <li><a href="/viewsFooter/carrera.html">Carrera</a></li>
+              <li><a href="/viewsFooter/menusitio.html">Mapa de Sitio</a></li>
             </ul>
+          </ul>
         </div>
-            
+
         <div class="row">
-        AROMAS Copyright © 2025 AROMAS - All rights reserved || Designed By: Baruc 
+          AROMAS Copyright © 2025 AROMAS - All rights reserved || Designed By:
+          Baruc
         </div>
-        </div>
+      </div>
     </footer>
 
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
+      integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
+      integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
