--- a/views/damas.html
+++ b/views/damas.html
@@ -91,32 +91,23 @@
                     let images = [
                         "https://th.bing.com/th/id/OIP.PFQZCTvedD7a1GyiR2EMEwHaHa?pid=ImgDet&w=180&h=180&c=7", "https://th.bing.com/th/id/OIP.acGs9wg1yFJ2pKTYfIk1QgHaHa?pid=ImgDet&w=180&h=180&c=7", "https://th.bing.com/th/id/OIP.h6aQ9_fKrEZuWxeE1DjUgwHaHa?pid=ImgDet&w=161&h=141.2280701754386&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.cPb7O0wRGsFImp7vW4rAYAHaIA?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", 
                         "https://th.bing.com/th/id/OIP.QgJlrFnK9ZyOJgFdfgKFsAHaH5?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.8j15RKMwk4tbLBLQcQkMHwHaHa?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.8xCUjKYkNYyQvpdc6TvcvAHaIb?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.FpO6XMOayx0awfUxa8THCQAAAA?pid=ImgDet&w=150&h=180&c=7&dpr=1.5", 
-                        "https://th.bing.com/th/id/OIP.L5bxAkO3-qf1UqZFHNf9GgAAAA?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP._RwLffPp3kOvvj0zbnkkuQHaHa?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.o4wTKezQaHlgh3t7fuwihAHaIb?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.vMwDs0cpQ_u9acGeaDM6WAHaHa?pid=ImgDet&w=135&h=180&c=7&dpr=1.5",
-                        "https://th.bing.com/th/id/OIP.iuaO0CKRGl6h1pHRQkYhWQHaHa?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.u8S2J6quJHV2GmhMVCZUbAHaHa?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.U89N29oNgtH-4EVMblb1LAHaHa?pid=ImgDet&w=161&h=155.526&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.n7T5GyqQYWR_nDxk-d1ADwHaHw?pid=ImgDet&w=180&h=180&c=7"
+                        "https://th.bing.com/th/id/OIP.dTLcQoCNL--MJE_lp9SkAAAAAA?pid=ImgDet&w=180&h=180&c=7", "https://th.bing.com/th/id/OIP.u8S2J6quJHV2GmhMVCZUbAHaHa?pid=ImgDet&w=161&h=161&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.U89N29oNgtH-4EVMblb1LAHaHa?pid=ImgDet&w=161&h=155.526&c=7&dpr=1.5", "https://th.bing.com/th/id/OIP.n7T5GyqQYWR_nDxk-d1ADwHaHw?pid=ImgDet&w=180&h=180&c=7"
                     ];
                     let texts = [
                         "Calvin Klein Beauty", "Dolce & Gabanna Light Blue", "Versace Bright Crystal", "Dior New Look", 
                         " Loewe Paula's Ibiza", "Tom Ford Vanilla Sex", "Bvlgari Allegra Chill & Sole ", "Estée Lauder Tender Light", 
-                        "Jo Malone London Frangipani", "Kilian Paris Sunkissed Goddess", " Gucci The Alchemist’s Garden", "Chanel Comète Les Exclusifs",
                         "Hallowen", "Guess 1981 Indigo", "Benetton United Dreames", "Miss Dior"
                     ];
                     let viewsPer = [
-                        "/viewsPerfumes/kal-klein.html", "views/construccion.html", "/viewsPerfumes/ver-cryst.html", "views/construccion.html",
-                        "views/construccion.html", "views/construccion.html", "/viewsPerfumes/bvl-alle.html", "views/construccion.html",
-                        "views/construccion.html", "views/construccion.html", "/views/construccion.html", "views/construccion.html",
-                        "views/construccion.html", "views/construccion.html", "/views/construccion.html", "/viewsPerfumes/miss-dior.html",
-                    ];
-                    let precio = [
-                        "$799.99 MXN", "$1,100.00 MXN", "$1,300 MXN", "$5,600 MXN", 
-                        "$4,600.00 MXN", "$6,000 MXN", "$3,200 MXN", "$3,200 MXN", 
-                        "$2,500 MXN", "$6,000 MXN", "$6,900 MXN", "$5,000 MXN",
-                        "$900 MXN", "$600 MXN", "$700 MXN", "$2,800 MXN",
+                        "/viewsPerfumes/kal-klein.html", "/viewsPerfumes/dolce-light.html", "/viewsPerfumes/ver-cryst.html", "/viewsPerfumes/dior-new.html",
+                        "/viewsPerfumes/loewe-paula.html", "/viewsPerfumes/tom-vanilla.html", "/viewsPerfumes/bvl-alle.html", "/viewsPerfumes/est-tender.html",
+                        "/viewsPerfumes/hal.html", "/viewsPerfumes/gue-1981.html", "/viewsPerfumes/ben-uni.html", "/viewsPerfumes/miss-dior.html",
                     ];
                     let count = 0;
-                    for (let i = 0; i < 4; i++) {
+                    for (let i = 0; i < 3; i++) {
                         document.write('<tr>');
                         for (let j = 0; j < 4; j++) {
-                            document.write(`<td><img src="${images[count]}" alt="Imagen ${count+1}"><br><a href="${viewsPer[count]}">${texts[count]}</a><br><p>${precio[count]}</p></td>`);
+                            document.write(`<td><img src="${images[count]}" alt="Imagen ${count+1}"><br><a href="${viewsPer[count]}">${texts[count]}</a></td>`);
                             count++;
                         }
                         document.write('</tr>');
